2007-09-19  Martin Hunt  <hunt@redhat.com>
	PR 5042
	* procfs.c (_stp_rmdir_proc_module): Warn if removal of
	/proc/systemtap/module is deferred. Do not defer removal of
	/proc/systemtap.
	(_stp_mkdir_proc_module): Call path_release(). Set ownership of
	/proc/systemtap/module to force deletion to be deferred.
	(_stp_create_procfs): Set owner of all path components.

2007-09-14  Martin Hunt  <hunt@redhat.com>

	* procfs.c (_stp_create_procfs): Be sure that directories in the path
	are really directories and not files.

2007-09-13  David Smith  <dsmith@redhat.com>

	* procfs.c (_stp_procfs_dir_lookup): Added 'const' qualifier to
	'dir' parameter.
	(_stp_create_procfs): Added 'const' qualifier to 'path'
	parameter.  Removed debug prints.
	(_stp_close_procfs): Removed debug prints.

2007-09-12  Martin Hunt  <hunt@redhat.com>

	* map-stat.c (_stp_map_new_hstat_log): Set buckets to 
	HIST_LOG_BUCKETS.
	(_stp_pmap_new_hstat_log): Ditto.
	(_stp_map_new_hstat_linear): Call _stp_stat_calc_buckets().
	(_stp_pmap_new_hstat_linear): Ditto.

	* stat.h (STP_MAX_BUCKETS): Define..
	(HIST_LOG_BUCKETS): Define.

	* stat.c (_stp_stat_init): Call _stp_stat_calc_buckets().

	* stat-common.c (_stp_stat_calc_buckets): New function. Common
	bucket calculation and error reporting code.
	(_stp_bucket_to_val): New function.
	(_stp_val_to_bucket): Renamed and now handles negative numbers.
	(_stp_stat_print_histogram): Handle negative values in log histograms.
	(__stp_stat_add): Cleanup..

	* map-gen.c (_stp_map_new): Remove buckets param for HIST_LOG.
	* pmap-gen.c (_stp_pmap_new): Ditto.
	
2007-09-10  Martin Hunt  <hunt@redhat.com>

	* procfs.c: New file. Common runtime procfs functions.

2007-08-20  Martin Hunt  <hunt@redhat.com>

	* stack.c (_stp_kta): Removed.

2007-08-20  Masami Hiramatsu <mhiramat@redhat.com>

	* stack-x86_64.c: Fix backtrace to use the value of stack register
	instead of its address.

2007-08-17  Martin Hunt  <hunt@redhat.com>
